--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div id="container">
       <div id="content">
         <img src="logo.png" alt="" style="max-height: 200px" />
+
+        <h1>Coming soon</h1>
       </div>
     </div>
   </body>
