--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </div>
     </div>
     <footer>
-      ©️ syetalabs.biz
+      ©️ syetalabs.org
       <script type="text/javascript">
         document.write(new Date().getFullYear());
       </script>
